--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,11 @@ test:
   database: sample_app2_test
 
 production:
-  <<: *default
-  database: sample_app2_production
-  username: sample_app2
-  password: <%= ENV["SAMPLEAPP2_DATABASE_PASSWORD"] %>
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: sample_app_production
+  username: sample_app
+  password: <%= ENV['SAMPLE_APP_DATABASE_PASSWORD'] %>
